openshift/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f ./docker-compose.yml -o ./openshift/
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f ./docker-compose.yml -o ./openshift/
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: ui
    spec:
      containers:
        - args:
            - mlflow
            - server
            - --backend-store-uri
            - mysql+pymysql://mlflow_user:mlflow_pass@mysql:3306/mlflow
            - --default-artifact-root
            - ./mlruns
            - --host
            - 0.0.0.0
            - --port
            - "5000"
          image: shivgupta121/mflowtrackingserver-ui:mlflow_ctr
          resources:
            limits:
              cpu: "800m"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
          name: mlflow-ui
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
          - mountPath: /mlruns
            name: mlflow
      volumes:
        - name: mlflow
          persistentVolumeClaim:
            claimName: myvolume
      restartPolicy: Always
status: {}
